# myAI

./: README.md
deploy/: NNAPI.md  Soc.md
deploy/DebugCode/: Android.md
deploy/NCNN_Tencent/: README.md  net_layer_forward.cpp
deploy/NCNN_Tencent/libAIObjDetCaffe_so/: CMakeLists.txt  build.sh  mtcnn.cpp  mtcnn.h  mtcnn_jni.cpp
deploy/NNAPI/nn_sample/: tags
deploy/NNAPI_Google/: NNAPI.md
deploy/NNAPI_Google/nn_sample/: cscope.files  cscope.in.out  cscope.out  cscope.po.out  cscope.sh  session.vim  viminfo.vim
deploy/SNPE_Qualcomm/: README.md  convert_mobiltnetSSD.sh
deploy/Tengine/: session.vim  viminfo.vim
deploy/Tengine_OpenAILab/: README.md
model/: someNote.txt  tf.md
model/caffe/: 3layersOfMNIST.md
model/tensorflowJS/: README.md  session.vim  simple_regression.md  viminfo.vim
model/tflearn/: 01_movieLikeOrNot.md  02_speechRecognition.md
others/: cppSkill.md
paper/: 期刊顶会名称.txt
paper/CV/: README.md
paper/CV/Segmentation/: README.md
